# tail-tray

./: .gitignore  AccountsTabUiManager.cpp  AccountsTabUiManager.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManageDriveWindow.cpp  ManageDriveWindow.h  ManageDriveWindow.ui  NetworkStateMonitor.cpp  NetworkStateMonitor.h  README.md  SysCommand.cpp  SysCommand.h  TailFileReceiver.h  TailRunner.cpp  TailRunner.h  TailSettings.cpp  TailSettings.h  TrayMenuManager.cpp  TrayMenuManager.h  build-deb.sh  main.cpp  models.h  resources.qrc  tail-tray-windows.rc  tail-tray.desktop  tail-tray.desktop.in  tail-tray.notifyrc  tail_tray_en_US.ts  tail_tray_sv_SE.ts
.github/workflows/: cmake-multi-platform.yml  debian-trixie-build.yml  tagged-releases.yml  ubuntu-24_04-build.yml  ubuntu-25_04-build.yml  ubuntu-25_10-build.yml  ubuntu-26_04-build.yml  update-latest-release-info.yml  windows_latest-build.yml
debian/: changelog  control  copyright
debian/upstream/: metadata
docs/: build-from-src-windows.md  build-from-src.md  nix-os.md  scriptable-actions.md
icons/: tailscale.icns
packaging/deb/tail-tray/DEBIAN/: control
packaging/flatpak/: org.flatpak.tail-tray.yml
src/: AccountsTabUiManager.cpp  AccountsTabUiManager.h  AdvertiseRoutesDlg.cpp  AdvertiseRoutesDlg.h  AdvertiseRoutesDlg.ui  DevicesTabUiManager.cpp  DevicesTabUiManager.h  DnsSettingsDlg.cpp  DnsSettingsDlg.h  DnsSettingsDlg.ui  IpnWatcher.cpp  IpnWatcher.h  KnownValues.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManageDriveWindow.cpp  ManageDriveWindow.h  ManageDriveWindow.ui  NetworkStateMonitor.cpp  NetworkStateMonitor.h  NotificationsManager.cpp  NotificationsManager.h  Paths.h.in  PleaseWaitDlg.cpp  PleaseWaitDlg.h  PleaseWaitDlg.ui  ScriptManager.cpp  ScriptManager.h  Scriptfolderwatcher.cpp  Scriptfolderwatcher.cpp.autosave  Scriptfolderwatcher.h  SingleApplicationImpl.h  SysCommand.cpp  SysCommand.h  TailDriveUiManager.cpp  TailDriveUiManager.h  TailFileReceiver.cpp  TailFileReceiver.h  TailRunner.cpp  (+12 more)
src/models/: CurrentTailPrefs.h  IpnEvents.h  JsonHelpers.h  Models.h  TailAccountInfo.h  TailDeviceInfo.h  TailDnsStatus.h  TailDriveInfo.h  TailNetInfo.h  TailPrefsConfig.h  TailState.h  TailStatus.h  TailUser.h
tests/: .gitignore  CMakeLists.txt
tests/data/: tail-status-mullvad.json
tests/src/: test-device-info.cpp  test-tail-status.cpp
translations/: tail_tray_de_DE.ts  tail_tray_en_US.ts  tail_tray_fr_FR.ts  tail_tray_sv_SE.ts
